K8S/platform-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: platform-client-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: platformclientservice
  template:
    metadata:
      labels:
        app: platformclientservice
    spec:
      containers:
        - name: platformclientservice
          image: braindalim23/platformclient:latest
---
apiVersion: v1
kind: Service
metadata:
  name: platform-client-service-np
spec:
  type: NodePort
  selector:
    app: platformclientservice
  ports:
    - name: platformclientservice
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: platform-client-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: platformclientservice
  ports:
    - name: platformclientservice
      protocol: TCP
      port: 80
      targetPort: 80
