K8S/platform-service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-service-node-port
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80

# kubectl run -i --tty load-generator --rm --image=busybox --restart=Never -- /bin/sh -c "while sleep 0.01; do wget -q -O- http://platform-service-node-port/api/p/platform; done"
