K8S/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-client-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: cacme.com
      http:
        paths:
          - path: /.*
            pathType: Prefix
            backend:
              service:
                name: platform-client-clusterip-service
                port:
                  number: 80

        # netstat -aon | findstr :80   check which is using port 80  
        # C:\Windows\System32\drivers\etc
